# steamboat

./: .gitignore  vercel.json
.claude/: ralph-loop.local.md
.github/workflows/: cd.yml  ci.yml
apps/web/: .env.example  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vercel.json  vitest.config.ts
apps/web/__mocks__/: expense-optimizer.ts  finance-core.ts  media-processor.ts
apps/web/__tests__/: middleware.test.ts  setup.ts
apps/web/__tests__/db/: client.test.ts
apps/web/__tests__/lib/: env.test.ts
apps/web/__tests__/wasm/: media-processor.test.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/__tests__/: avatar.test.tsx  badge.test.tsx  button.test.tsx  card.test.tsx  datepicker.test.tsx  design-tokens.test.ts  domain-cards.test.tsx  input.test.tsx  modal.test.tsx  navigation.test.tsx  select.test.tsx  skeleton.test.tsx  spinner.test.tsx  tabs.test.tsx  theme-toggle.test.tsx  theme.test.tsx  toast.test.tsx  toggle.test.tsx
apps/web/components/domain/: activity-card.tsx  admin-transfer-modal.tsx  ai-settings-section.tsx  attendee-card.tsx  bulk-download-button.tsx  delete-trip-modal.tsx  deleted-item-card.tsx  dispute-card.tsx  dispute-form.tsx  download-button.tsx  expense-card.tsx  expense-edit-form.tsx  export-pdf-button.tsx  gallery-filters.tsx  index.tsx  location-link.tsx  media-card.tsx  media-edit-modal.tsx  media-upload-modal.tsx  media-viewer.tsx  notification-settings.tsx  payment-method-selector.tsx  payment-profile-form.tsx  payment-status-actions.tsx  poll-admin-actions.tsx  poll-card.tsx  poll-creation-form.tsx  poll-results-summary.tsx  poll-voting-card.tsx  profile-editor.tsx  profile-picture-upload.tsx  settle-up-modal.tsx  share-button.tsx  tag-input.tsx  trip-banner-upload.tsx  trip-stats-card.tsx
apps/web/components/navigation/: index.tsx
apps/web/components/theme/: design-tokens.ts  index.ts  theme-provider.tsx
apps/web/components/ui/: avatar.tsx  badge.tsx  button.tsx  card.tsx  (+11 more)
apps/web/emails/: base-layout.tsx  invite-email.tsx  payment-reminder-email.tsx  settlement-email.tsx
apps/web/hooks/: index.ts  use-trip-realtime.ts
apps/web/lib/: env.ts  export.ts  pusher-server.ts  pusher.ts  theme.ts
apps/web/scripts/: copy-wasm.js
apps/web/types/: wasm.d.ts
crates/: Cargo.toml
crates/expense-optimizer/: Cargo.toml
crates/expense-optimizer/src/: balance.rs  lib.rs  simplify.rs  types.rs  wasm.rs
crates/finance-core/: Cargo.toml
crates/finance-core/src/: balance.rs  lib.rs  split.rs  types.rs  wasm.rs
crates/mcp-servers/: Cargo.toml
crates/mcp-servers/expense-optimizer-mcp/: Cargo.toml
crates/mcp-servers/expense-optimizer-mcp/src/: lib.rs
crates/mcp-servers/payment-links-mcp/: Cargo.toml
crates/mcp-servers/payment-links-mcp/src/: lib.rs
crates/mcp-servers/wit/: expense-optimizer.wit  mcp-server.wit  payment-links.wit
crates/media-processor/: Cargo.toml
crates/media-processor/src/: exif.rs  hash.rs  lib.rs  resize.rs  thumbnail.rs  wasm.rs
crates/media-processor/tests/fixtures/: generate_test_images.py
crates/tests/: Cargo.toml  integration.rs  lib.rs
docs/: README.md
docs/design/: AGENT-INTEGRATION.md  DESIGN.md  RUST-WASM-INTEGRATION.md
docs/plans/: implementation-plan.md  phase-7-implementation-plan.md  phase-8-completion-plan.md  rust-infrastructure-implementation.md
docs/requirements/: REQUIREMENTS.md
scripts/: build-wasm.sh
(+258 files in other folders)
