[workspace]
members = ["expense-optimizer", "finance-core", "media-processor", "tests", "mcp-servers/expense-optimizer-mcp", "mcp-servers/payment-links-mcp"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2.106"
console_error_panic_hook = "0.1"
wasm-bindgen-test = "0.3"
sha2 = "0.10"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
kamadak-exif = "0.6"
finance-core = { path = "finance-core", default-features = false }
expense-optimizer = { path = "expense-optimizer", default-features = false }
serde_json = "1.0"
urlencoding = "2.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
