[package]
name = "finance-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Financial calculations with decimal precision for expense splitting"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wasm"]
wasm = ["dep:wasm-bindgen", "dep:console_error_panic_hook"]

[dependencies]
serde = { workspace = true }
serde-wasm-bindgen = { workspace = true }
wasm-bindgen = { workspace = true, optional = true }
console_error_panic_hook = { workspace = true, optional = true }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }
