[package]
name = "media-processor"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Client-side media processing for gallery uploads (placeholder)"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wasm"]
wasm = ["dep:wasm-bindgen", "dep:console_error_panic_hook"]

[dependencies]
serde = { workspace = true }
serde-wasm-bindgen = { workspace = true }
wasm-bindgen = { workspace = true, optional = true }
console_error_panic_hook = { workspace = true, optional = true }

# Media processing dependencies
image = { workspace = true }
sha2 = { workspace = true }
kamadak-exif = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }
serde_json = "1.0"
